# text_classification_project

./: Dockerfile  Makefile  README.md  app.py  dvc.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: text_classification_model.joblib
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
